<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_copy"
        android:title="@string/menu_item_copy" />
    <item
        android:id="@+id/menu_translate"
        android:title="@string/menu_item_translate" />
    <item
        android:id="@+id/menu_select_all"
        android:title="@string/menu_item_select_all" />
    <item
        android:id="@+id/menu_share"
        android:title="@string/menu_item_share" />
    <item
        android:id="@+id/menu_highlight"
        android:title="@string/menu_item_highlight" />
    <item
        android:id="@+id/menu_note"
        android:title="@string/menu_item_note" />
    <item
        android:id="@+id/menu_google"
        android:title="@string/menu_item_google" />
    <item
        android:id="@+id/menu_read_aloud"
        android:title="@string/menu_item_read_aloud" />
    <item
        android:id="@+id/menu_dictionary"
        android:title="@string/menu_item_dictionary" />
</menu>
